gap fixed , bg update , swiper added in testimonial, style update

--- a/newstyle1.css
+++ b/newstyle1.css
@@ -50,10 +50,13 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
-
+p{
+    color: var(--text-color);
+}
 section {
-    padding-top: 2.5em;
-    padding-bottom: 2.5em;
+    padding-top: 3.5em;
+    padding-bottom: 3.5em;
+    
 }
 
 button {
@@ -274,7 +277,11 @@ button {
     background: url('/assets/svg/hero-bg.svg') no-repeat;
     background-size: cover;
 }
-
+@media  screen and (max-width: 768px) {
+    #hero-bg {
+        background: none;
+    }
+}
 video {
     max-width: 100%;
     max-height: 100%;
@@ -418,12 +425,18 @@ video {
 .mobile-show{
     display: none;
 }
+.text-start{
+    text-align: start;
+}
 @media  screen and (max-width: 768px) {
     .mobile-show{
         display: block;
     }
     .hide-mobile{
         display: none !important;
+    }
+    .text-start{
+        text-align: center;
     }
 }
 
@@ -534,15 +547,7 @@ video {
 }
 
 /* -----------review cards -----------*/
-.review-cards {
-    display: flex;
-    gap: 1em;
-    text-align: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 3.5em;
 
-}
 
 .review-cards .review-card {
     width: 290px;
@@ -582,35 +587,38 @@ video {
     background: #FAFAFA;
     border: 1px solid #DCDCDC;
     border-radius: 1.2em;
+    overflow: hidden;
+    
 }
 
 .emergency img {
     width: 624px;
     height: 560px;
-
 }
 .mobile-padding{
     padding: 20px;
     width: calc(100% - 48px);
 }
-
+.emergency button{
+    font-size: 14px;
+}
 @media screen and (max-width:1200px) {
     .emergency {
         flex-wrap: nowrap;
-
     }
 }
 
 @media screen and (max-width:768px) {
-    .emergency img {
-        border-top-right-radius: 1.2em;
-
-    }
-
+   
     .emergency img {
         width: auto;
         height: auto;
-
+    }
+    
+    .emergency button{
+        display: flex;
+        justify-content: center;
+        align-self: center;
     }
 
 }
